--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -1,22 +1,19 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="ru.shutoff.routeselector">
+    package="ru.shutoff.routeselect">
 
     <application
         android:allowBackup="true"
-        android:label="@string/app_name"
-        android:icon="@drawable/ic_launcher"
-        android:theme="@style/AppTheme">
-
+        android:label="@string/app_name">
         <meta-data
             android:name="xposedmodule"
             android:value="true" />
         <meta-data
-            android:name="xposeddescription"
-            android:value="Select navigation application from google search" />
-        <meta-data
             android:name="xposedminversion"
-            android:value="30" />
-
+            android:value="2.0*" />
+        <meta-data
+            android:name="xposeddescription"
+            android:value="Select navigatio application from google search" />
     </application>
 
 </manifest>
